refactor: Improve task management and validation
- Move page size validation to controller layer
- Fix Task immutability handling in tests
- Remove unnecessary ArrayList wrapping in TaskService
- Add proper error handling for invalid pagination parameters